Fix <abbr> vertical alignment.

--- a/src/styles/bones/bootstrap.styl
+++ b/src/styles/bones/bootstrap.styl
@@ -23,6 +23,7 @@ selection_color ?= #ffed75;
 
 // Normalize vertical alignment of inline-elements in Chrome, Firefox, and Opera.
 a,
+abbr,
 b,
 em,
 i,
